# src/app/integrations/console/contract/openapi.json
@@ -3909,10 +3909,25 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "revisionId": {
+                    "type": "string",
+                    "minLength": 1,
+                    "maxLength": 200
+                  },
                   "name": {
                     "type": "string",
                     "minLength": 1,
                     "maxLength": 200
+                  },
+                  "publishedAt": {
+                    "type": "string",
+                    "format": "date-time",
+                    "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$"
+                  },
+                  "assetCount": {
+                    "type": "integer",
+                    "minimum": 0,
+                    "maximum": 9007199254740991
                   },
                   "parentRevisionId": {
                     "nullable": true,
@@ -3925,7 +3940,14 @@
                     "minLength": 1
                   }
                 },
-                "required": ["name", "parentRevisionId", "payload"],
+                "required": [
+                  "revisionId",
+                  "name",
+                  "publishedAt",
+                  "assetCount",
+                  "parentRevisionId",
+                  "payload"
+                ],
                 "additionalProperties": false
               }
             }
